doc: add documentacion about film controller's methods
